Trabajando sobre CRUD, Logger y Refactor General

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -802,6 +802,11 @@ header .titleSection > * {
   cursor: pointer;
 }
 /*Estadisticas*/
+/*Instrucciones de Uso*/
+.instructions {
+  text-align: center;
+}
+/*Instrucciones de Uso*/
 .errors {
   background-color: #ea4235;
   color: #fff;
