--- a/public/stylus/styles.styl
+++ b/public/stylus/styles.styl
@@ -224,6 +224,12 @@ header
 
 /*Estadisticas*/
 
+/*Instrucciones de Uso*/
+.instructions
+	text-align center
+
+/*Instrucciones de Uso*/
+
 .errors
 	background-color #ea4235
 	color #fff
@@ -241,5 +247,6 @@ header
 	background-color baseRed
 .styleYellow
 	background-color baseYellow
+
 
 @import 'media'
