--- a/views/management/statistics.jade
+++ b/views/management/statistics.jade
@@ -13,6 +13,10 @@ block modal
 			article.footerModal
 				button.btn.btnError(data-closeModal='#modal' data-rol-modal='close' data-referenceModal='#modal') Volver
 block content
+
+	section.instructions
+		p Estadisticas relacionadas con la informacion el/la(los/las) niñ@s que tengas a tu cargo.
+
 	section.statistics
 		article.statistic.statisticToday(data-statistic='today')
 			h2 Hoy
