--- a/views/partials/menuAdmin.jade
+++ b/views/partials/menuAdmin.jade
@@ -2,4 +2,6 @@ a.item(href='/admin/check-in')
 	span.icon-check-in(tooltip='Registro')
 a.item(href='/admin/collections')
 	span.icon-database(tooltip='Colecciones')
+a.item(href='/user/#{user.username}')
+	span.icon-user(tooltip='Perfil')
 
