--- a/views/partials/menuParents.jade
+++ b/views/partials/menuParents.jade
@@ -1,2 +1,5 @@
 a.item(href='/management/statistics')
 	span.icon-statistics(tooltip='Estadisticas')
+a.item(href='/user/#{user.username}')
+	span.icon-user(tooltip='Perfil')
+
