--- a/views/users/authenticate.jade
+++ b/views/users/authenticate.jade
@@ -6,6 +6,8 @@ block titleSection
 	p Ingresar
 
 block content
+	section.instructions
+		p Inicia Sesion Para utilizar #[strong #{nameProject}]
 	form#formAuthenticate.form.formOnlyInput.formAuthenticate(action='/authenticate' method='POST')
 		img.userPhoto(src="/images/users/unkown.png", alt="")
 		p.userUsername
@@ -24,6 +26,7 @@ block content
 				button.btn.btnSuccess(type='submit')
 					span Ingresar
 		a(href="/remember") Has Olvidado algo?
+		p mensaje: #{message}
 	script(src='/js/lib/markdown.min.js')
 	script(src='/js/utilities.js')
 	script(src='/js/authenticate.js')
