Soporte para mensajes flash y avances en la edicion de documentos MongoDB

--- a/public/stylus/styles.styl
+++ b/public/stylus/styles.styl
@@ -6,6 +6,7 @@
 @import 'lib/notifications'
 @import 'lib/buttons'
 @import 'lib/forms'
+@import 'lib/messagesFlash'
 
 @import 'icomoon/style'
 
@@ -71,6 +72,10 @@ header
 		cursor pointer
 		font-size 3rem
 		margin 0
+	input
+		font-size 1.2rem
+		padding 10px
+		width 80%
 
 /*Autenticacion*/
 
