--- a/views/mails/remember.jade
+++ b/views/mails/remember.jade
@@ -6,12 +6,12 @@ html(lang='es' style='font-size: 18px')
 		block title
 	body(style='margin:0;')
 		section.contentWidth
-				header(style='background-color: #34a853;color: #fff !important;margin-bottom: 20px;')
+				header(style='background-color: #34a853;color: #fff !important;')
 					h3(style='margin: 0;padding: 10px 0;text-align: center;')
 						a(href='https://remember-help.herokuapp.com/' style='text-decoration: none;color: inherit;') remeberHelp
 					section(style='box-shadow: 0 10px 30px rgba(0,0,0,0.3);font-size: 3rem;padding: 30px 0;padding-left: 20px;')
 						p(style='margin: 0;') Recordar Datos
-				section(style='color:black')
+				section(style='color:black; border:2px solid #34a853;border-bottom-left-radius: 8px;border-bottom-right-radius: 8px;padding: 5px;')
 					p Hola #[strong #{associated.name}]
 					p Pediste que te recordamaos tus Datos
 					ul(style='list-style:none')
