--- a/views/users/checkIn.jade
+++ b/views/users/checkIn.jade
@@ -7,7 +7,7 @@ block titleSection
 
 block content
 	section.instructions
-		p Agrega Niñ@s y pariente con sus respectivos Usuarios
+		p Agrega #[b Niñ@s] y #[b Parientes] con sus respectivos #[b Usuarios]
 
 	form#formCheckIn.form.formOnlyInput(enctype='multipart/form-data' action='/admin/check-in' method='POST')
 		fieldset.fieldset#dataChildren
