--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -212,6 +212,10 @@ th {
   position: absolute;
   white-space: nowrap;
 }
+a {
+  color: #34a853;
+  text-decoration: none;
+}
 .modal {
   height: 100%;
   opacity: 0;
@@ -478,6 +482,44 @@ th {
     width: 50%;
   }
 }
+.message {
+  border-radius: 0.25em;
+  color: #fff;
+  font-weight: bold;
+  padding: 3px;
+  text-align: center;
+  position: relative;
+}
+.message .close {
+  -webkit-appearance: none;
+  background: 0 0;
+  border: 0;
+  color: #000;
+  color: inherit;
+  cursor: pointer;
+  float: right;
+  font-size: 21px;
+  font-weight: 700;
+  line-height: 1;
+  opacity: 0.2;
+  padding: 0;
+  position: absolute;
+  text-shadow: 0 1px 0 #fff;
+  right: 6px;
+  top: 0px;
+}
+.info {
+  background-color: #337ab7;
+}
+.error {
+  background-color: #d9534f;
+}
+.warning {
+  background-color: #f0ad4e;
+}
+.success {
+  background-color: #5cb85c;
+}
 @font-face {
   font-family: 'icomoon';
   src: url("fonts/icomoon.eot?8ibmm1");
@@ -639,6 +681,11 @@ header .titleSection > * {
   cursor: pointer;
   font-size: 3rem;
   margin: 0;
+}
+.formAuthenticate input {
+  font-size: 1.2rem;
+  padding: 10px;
+  width: 80%;
 }
 /*Autenticacion*/
 /*Acvtividades*/
@@ -846,7 +893,7 @@ header .titleSection > * {
   }
   .formAuthenticate {
     margin: 0 auto;
-    width: 50%;
+    width: 50% !important;
   }
   .formAuthenticate input {
     font-size: 1.5rem;
