--- a/public/stylus/media.styl
+++ b/public/stylus/media.styl
@@ -10,7 +10,7 @@
 			width 45%
 	.formAuthenticate
 		margin 0 auto
-		width 50%
+		width 50% !important
 		input
 			font-size 1.5rem
 			padding 15px
