--- a/views/management/statistics.jade
+++ b/views/management/statistics.jade
@@ -11,7 +11,7 @@ block modal
 			article.titleModal
 			article.bodyModal
 			article.footerModal
-				button.btn.btnError(data-closeModal='#modal' data-rol-modal='close' data-referenceModal='#modal') Volver
+				button.btn.btnError.effect(data-closeModal='#modal' data-rol-modal='close' data-referenceModal='#modal') Volver
 block content
 
 	section.instructions
