--- a/views/templates/base.jade
+++ b/views/templates/base.jade
@@ -14,6 +14,9 @@ html(lang='es')
 					p(class="#{typeMessages}").message #{message}
 						button(type="button" class="close" )
 							span ×
+		template#commonElements
+			button.btn.effectspan(type="button")
+
 		script(src='/js/main.js')
 
 
