--- a/views/templatesStatistics/evolution.jade
+++ b/views/templatesStatistics/evolution.jade
@@ -14,7 +14,7 @@ template.optionsStatistic
 			label.label(for='dateEnd') Fecha Final
 			input#dateEnd(type='date' name='dateEnd')
 		article.inputContainer.alignItemsCenter
-			button.btn.btnSuccess(type='submit')
+			button.btn.btnSuccess.effect(type='submit')
 				span Generar
 	script.
 		currentTime = new Date()
