--- a/views/templatesStatistics/today.jade
+++ b/views/templatesStatistics/today.jade
@@ -8,7 +8,7 @@ template.optionsStatistic
 				for children in parent.children
 					option(value='#{children.id}') #{children.name}
 		article.inputContainer.alignItemsCenter
-			button.btn.btnSuccess(type='submit')
+			button.btn.btnSuccess.effect(type='submit')
 				span Generar
 template.resultStatistics
 	article
