--- a/views/users/checkIn.jade
+++ b/views/users/checkIn.jade
@@ -53,7 +53,7 @@ block content
 				article.inputContainer
 					input(type='password' name='confirmPasswordParent' id='confirmPasswordParent' placeholder='Confirmar Contraseña' required)
 		article.inputContainer.alignItemsCenter
-			button.btn.btnSuccess(type='submit')
+			button.btn.btnSuccess.effect(type='submit')
 				span Registro
 	script(src='/js/utilities.js')
 	script(src='/js/checkIn.js')
