--- a/views/users/remember.jade
+++ b/views/users/remember.jade
@@ -14,5 +14,5 @@ block content
 			article.inputContainer
 				input(type='email', name='email', placeholder='Correo Electronico', autofocus required)
 			article.inputContainer.alignItemsCenter
-				button#continueAuthenticate.btn.btnSuccess(type='submit')
+				button#continueAuthenticate.btn.btnSuccess.effect(type='submit')
 					span Continuar
