--- a/public/stylus/lib/buttons.styl
+++ b/public/stylus/lib/buttons.styl
@@ -1,4 +1,4 @@
-.btn
+/*.btn
 	border none !important
 	border-radius 2px
 	color #fff
@@ -36,3 +36,4 @@
 		background-color colorBtnDiabledBackground !important
 		box-shadow 0px 6px colorBtnDiabledBorder
 		cursor not-allowed
+*/
