--- a/views/users/perfil.jade
+++ b/views/users/perfil.jade
@@ -40,7 +40,7 @@ block content
 			article.inputContainer
 				input(type='password', name='confirmNewPassword', placeholder='Repetir Contraseña', autofocus required)
 			article.inputContainer.alignItemsCenter
-				button.btn.btnSuccess(type='submit')
+				button.btn.btnSuccess.effect(type='submit')
 					span Cambiar
 
 	if associated.children
@@ -60,7 +60,7 @@ block content
 				article.inputContainer
 					input(type='password', name='confirmNewPassword', placeholder='Repetir Contraseña', autofocus required)
 				article.inputContainer.alignItemsCenter
-					button.btn.btnSuccess(type='submit')
+					button.btn.btnSuccess.effect(type='submit')
 						span Cambiar
 
 block scripts
