--- a/views/users/remember.jade
+++ b/views/users/remember.jade
@@ -16,3 +16,6 @@ block content
 			article.inputContainer.alignItemsCenter
 				button#continueAuthenticate.btn.btnSuccess.effect(type='submit')
 					span Continuar
+block scripts
+	script(src='/js/utilities.js')
+
