Implementacion de es5 completa. Pero por cuestiones de testeo se volvera a es4

--- a/views/templates/templateApp.jade
+++ b/views/templates/templateApp.jade
@@ -25,8 +25,8 @@ block template
 			section.titleSection
 				block titleSection
 		block content
-	script(src='/js/utilities.js')
-	script(src='/js/lib/markdown.js')
-	script(src='/js/speech.js')
+	//script(src='/js/utilities.js')
+	//script(src='/js/lib/markdown.js')
+	//script(src='/js/speech.js')
 	block scripts
 
