Avances en CRUD, busquedas con filtros

--- a/src/stylus/styles.styl
+++ b/src/stylus/styles.styl
@@ -1,3 +1,6 @@
+@import "nib"
+@import "nib/vendor"
+
 @import 'normalize'
 @import url("https://fonts.googleapis.com/css?family=Lato")
 
@@ -9,6 +12,8 @@
 @import 'lib/messagesFlash'
 @import 'lib/materialDesign'
 @import 'lib/loader'
+
+vendor-prefixes = o ms webkit moz official
 
 @import 'icomoon/style'
 
