--- a/views/collections/index.jade
+++ b/views/collections/index.jade
@@ -23,6 +23,7 @@ block content
 			button.btn.effect.btnSuccess(type='button' id='AgregateInCollection' data-action='create') Agregar
 			button.btn.effect.btnError(type='button' id='emptyCollection' data-action='delete') Vaciar
 
+	form#filterSearch.form.formLabelInput
 	section.documents#results
 	section#addDocument
 
