--- a/src/stylus/lib/forms.styl
+++ b/src/stylus/lib/forms.styl
@@ -54,6 +54,22 @@
 		border-left 1px solid gray
 		padding 0 10px
 
+.referenceModel
+.fileImage
+	width 90%
+	margin 0 auto
+
+.fileImage
+	img
+		width 50%
+		margin 0 auto
+		display block
+		margin-bottom 5px
+	input
+		display block
+
+
+
 @media screen and (min-width: 768px)
 	.form
 		&OnlyInput
