Agrengando Modal para visaulizacion de resultados de busqueda e insersiones (CRUD) y avances en implementacion del logger

--- a/src/stylus/lib/forms.styl
+++ b/src/stylus/lib/forms.styl
@@ -47,8 +47,9 @@
 			margin 0 auto
 			width 90%
 .fieldset
-	margin 20px 0
+	margin 20px
 	border-radius 3px
+	border 1px solid gray
 	.legend
 		font-weight bold
 		border-left 1px solid gray
@@ -61,7 +62,7 @@
 
 .fileImage
 	img
-		width 50%
+		height 50px
 		margin 0 auto
 		display block
 		margin-bottom 5px
