Avance en creacion de log y visualizacion

--- a/src/stylus/lib/modal.styl
+++ b/src/stylus/lib/modal.styl
@@ -15,12 +15,11 @@
 		flex-wrap wrap
 		height calc(100% - 20px)
 		overflow auto
-		padding 20px
 		transition all 2s linear
 		width 100%
 		z-index 100
 		.titleModal
-			border-bottom 1px solid gray
+			box-shadow 0 0 10px 0 rgba(0,0,0,0.4)
 			height 80px
 			text-align right
 			width 100%
@@ -28,12 +27,14 @@
 		.bodyModal
 			border none
 			height calc(100% - 160px)
-			overflow: auto;
-			padding 0 10px
+			overflow auto
+			padding 0 20px
 			width 100%
 		.footerModal
-			height 80px
+			height 70px
 			width 100%
+			padding 10px 10px 0px 10px
+			box-shadow 0 0px 10px 0 rgba(0,0,0,0.4)
 			.backPage
 				cursor pointer
 				font-size 50px
