--- a/views/partials/menuChildren.jade
+++ b/views/partials/menuChildren.jade
@@ -1,2 +1,2 @@
-a.item(href='/children/activities')
-	span.icon-activities(tooltip='Actividades')
+//a.item(href='/children/activities')
+//	span.icon-activities(tooltip='Actividades')
