Modificaicones a Modelos de Activitiy y History

--- a/views/templates/base.jade
+++ b/views/templates/base.jade
@@ -59,7 +59,7 @@ html(lang='es')
 		script.
 			console.log(!{JSON.stringify(messages)})
 			//$('#time').datetimepicker({ 'format' : 'hh:mm:ss' });
-			//$('#date').datetimepicker({ 'format' : 'Y-m-d' });
-
+			//$('#date').datetimepicker({ 'format' : 'Y-m-d' })
+		block script
 
 
