--- a/views/users/authenticate.jade
+++ b/views/users/authenticate.jade
@@ -26,6 +26,7 @@ block content
 				button.btn.btnSuccess.effect(type='submit')
 					span Ingresar
 		a(href="/remember") Has Olvidado algo?
+block script
 	script(src='/js/lib/markdown.min.js')
 	script(src='/js/utilities.js')
 	script(src='/js/authenticate.js')
