--- a/src/stylus/styles.styl
+++ b/src/stylus/styles.styl
@@ -5,7 +5,7 @@
 @import url("https://fonts.googleapis.com/css?family=Lato")
 
 @import 'OOCSS'
-@import 'lib/modal'
+//@import 'lib/modal'
 @import 'lib/notifications'
 @import 'lib/buttons'
 @import 'lib/forms'
