--- a/views/children/activities.jade
+++ b/views/children/activities.jade
@@ -11,7 +11,7 @@ block content
 		each activity in activities
 			article.activity(data-time='#{activity.time}' data-speech='#{activity.textSpeech}' data-id='#{activity._id}' data-text='#{activity.text}' data-tolerance = '#{activity.tolerance}')
 				p.titleActivity #{activity.text}
-				img.imgActivity(src='/images/activities/#{activity.img}', alt='')
+				img.imgActivity(src='#{activity.img}', alt='')
 
 				- if (activity.state.codeText == 'complete')
 					- if (activity.state.detail.aClock)
@@ -36,17 +36,18 @@ block content
 						span(aria-hidden='true') &times;
 					h4#myModalLabel.modal-title Modal title
 				.modal-body
-					if (children.stateHealth == 0)
-						button.btn.btnSuccess.btnRound#buttonCaptureVoice
-							span.icon-voice
-					else if (children.stateHealth == 1 || children.stateHealth == 2)
-						button.btn.btn-success(onclick='response("si")') Si
-							span.icon-
-						button.btn.btn-danger(onclick='response("no")') No
-							span.icon-
+					.text-center
+						if (children.stateHealth == 0)
+							button.btn.btn-success
+								span.icon-voice
+
+						else if (children.stateHealth == 1 || children.stateHealth == 2)
+							button.btn.btn-success(onclick='response("si")') Si
+								span.icon-
+							button.btn.btn-danger(onclick='response("no")') No
+								span.icon-
 				.modal-footer
-					button.btn.btn-danger(type='button', data-dismiss='modal') Close
-					button.btn.btn-primary(type='button') Save changes
+					button.btn.btn-danger(type='button', data-dismiss='modal') Volver
 
 block scripts
 	script(src='/js/activities.js')
